--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -38,7 +38,7 @@
   flex-shrink: 0;
   text-decoration: none;
   width: auto;
-  padding-left: 2.2rem;
+  padding-left: 3rem;
 }
 
 .logoText {
